# img_search_by_text

./: .devdbrc  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py  openapi.yaml
backend/app/api/: api_manger.py
backend/app/api/endpoint/: galleries_api.py  gallery_manager.py  history_api.py  history_manager.py  images_api.py  img_manager.py  img_search.py  search_api.py  trash_api.py
backend/app/core/: _db_handler.py  _video_process.py  clip_handler.py  db_handler.py  img_process.py  utils.py  video_process.py
backend/app/core/db_handler/: gallery_handler.py  history_handler.py  img_handler.py
backend/app/logs/: config.py
backend/app/schemas/: common.py  gallery.py  history.py  image.py  search.py
backend/backend/resource/clip_model/: .msc
backend/db/sql_db/config/: settings.py
backend/db/sql_db/models/: ImageGalleryTrash.py  gallery.py  history.py  image.py  (+1 more)
backend/db/vector_db/: client.py
docs/: frontend-project-backend-api-requirements.md
frontend/: .gitignore  README.md  app.js  eslint.config.js  index.html  package-lock.json  package.json  style.css  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/Layout/: MainLayout.tsx
frontend/src/components/: ErrorBoundary.tsx  theme-provider.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: image-resource.ts  media-api.ts  media-query.ts  query-client.ts  request.ts
frontend/src/router/: index.tsx
frontend/src/store/: useGalleryStore.ts  useTopbarNameStore.tsx
frontend/src/types/: media.ts
frontend/test/: test.html  test.js
(+35 files in other folders)
